Completed work on aesthetic changes, fixed misalignments on body.

--- a/bp-web-client/angular-app/src/app/shared/components/app-footer/app-footer.component.css
+++ b/bp-web-client/angular-app/src/app/shared/components/app-footer/app-footer.component.css
@@ -1,6 +1,8 @@
 .footer {
   display: block;
   background-color: #2b2b2b;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .footer-mobile {
@@ -40,8 +42,8 @@ a.mobile{
   font-weight: lighter;
   letter-spacing: 1.2px;
 }
-.footer-links {
-text-align: end;
+.footer-link {
+text-align: center;
 
 }
 
