--- a/bp-web-client/angular-app/src/assets/scss/styles.scss
+++ b/bp-web-client/angular-app/src/assets/scss/styles.scss
@@ -2851,6 +2851,12 @@ strong,
   padding: 2.8em 3.2em
 }
 
+.lets-talk-services {
+  position: relative;
+  background: url(~src/assets/images/servicesPage/bytePushersServicesPageSplashScreenBackground.jpg) no-repeat center;
+  background-size: cover;
+  padding: 2.8em 3.2em
+}
 .lets-talk-work {
   position: relative;
   background: url(~src/assets/images/worksPage/byePushersWorkCalenderContactImage.jpg) no-repeat center;
@@ -2874,16 +2880,6 @@ strong,
 
 }
 
-.lets-talk-services {
-  position: relative;
-  background: url(~src/assets/images/servicesPage/bytePushersServicesContactImage.jpg) no-repeat center;
-  background-size: cover;
-  padding: 2.8em 3.2em;
-  background-color: rgba(0, 0, 0, 0.6);
-  background-blend-mode: multiply;
-
-
-}
 
 .lets-talk-heading {
   color: #fff;
@@ -2903,7 +2899,6 @@ strong,
   font-weight: 700;
   width: 12.25em;
   max-width: 100%;
-  padding: 0.9em 1.25em;
   background: transparent;
   border: 2px solid #fff;
   color: #f5f5f5;
@@ -3014,9 +3009,6 @@ body {
 }
 
 
-html, body {
-  height: 100%;
-}
 
 body {
   margin: 0;
